# danrerlib

./: .coverage  .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  generate_conda_metadata.py  index.md  pyproject.toml  setup.py
docs/: .buildinfo  conf.py  example.ipynb  genindex.html  index.html  index.md  license.md  make.bat  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/_build/doctrees/: changelog.doctree  conduct 3.doctree  conduct.doctree  contributing.doctree  environment 3.pickle  (+5 more)
docs/_sources/: index.md.txt
docs/autoapi/: index 2.html  index.html
docs/devguide/: conduct.html  license.html
docs/tutorials/: functional_enrichment.html  index.html  perform_geneid_mapping.html  perform_geneid_mapping.ipynb  perform_orthology_mapping.html  perform_orthology_mapping.ipynb
docs/userguide/: installation.html  installation.md  introduction.html  introduction.md  usage.html  usage.md
docs_dev/: Makefile  conf.py
recipe/: meta.yaml
results/: workflow.ipynb
sphinx/: conf.py  index.md
sphinx/tutorials/: funcional_enrichment.ipynb  functional_enrichment.ipynb
sphinx/userguide/: installation.md
src/danRerlib/: GO.py  KEGG.py  __init__.py  enrichment.py  enrichplots.py  mapping.py  settings.py  utils.py
tests/: notes.txt  out_data.csv  out_data_MF.csv  sctratch.ipynb  test_enrich.py  test_go.py  test_kegg.py  test_mapping.py
tutorials/: perform_enrichment.ipynb  perform_gene_id_mapping.ipynb  perform_orthology_mapping.ipynb  scratch.ipynb  scratch.py
(+1251 files in other folders)
